# iBeaconGateway

./: CMakeLists.txt  ESP32_Guide.md  README.md  floats.txt  partitions.csv  sdkconfig  test.py
components/bt/: CMakeLists.txt  Kconfig  linker.lf.esp32c2  sdkconfig.rename
components/bt/common/btc/core/: btc_task.c
components/bt/common/include/: bt_user_config.h
components/bt/controller/esp32/: bt.c
components/bt/controller/esp32c2/: Kconfig.in  bt.c  esp_bt_cfg.h
components/bt/controller/esp32c3/: bt.c
components/bt/controller/esp32c6/: Kconfig.in  bt.c
components/bt/controller/esp32h2/: Kconfig.in  bt.c
components/bt/esp_ble_mesh/: Kconfig.in
components/bt/esp_ble_mesh/core/: net.c  prov_pvnr.c
components/bt/esp_ble_mesh/core/bluedroid_host/: adapter.c
components/bt/host/bluedroid/: Kconfig.in
components/bt/host/bluedroid/api/: esp_bt_device.c  esp_gap_ble_api.c  esp_gap_bt_api.c
components/bt/host/bluedroid/hci/: hci_layer.c
components/bt/host/nimble/: Kconfig.in
components/bt/host/nimble/nimble/: .mailmap  .rat-excludes  .travis.yml  README.md  RELEASE_NOTES.md  repository.yml
components/bt/test_apps/: .build-test-rules.yml  pytest_bt.py  sdkconfig.defaults
components/eth_enc28j60/: CMakeLists.txt  esp_eth_enc28j60.h  esp_eth_mac_enc28j60.c  esp_eth_phy_enc28j60.c
data/: floats.txt.
interface/: kalmanCalc.py  main.py
main/: CMakeLists.txt  async_server_utils.h  ble.c  cert.h  client.h  defs.h  ethernet.h  kalman_filter.c  kalman_filter.h  main.c  mqtt.h  parking.c  parking.h  server.c  server.h  tag.c  tag.h  wifi.h
(+272 files in other folders)
